<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="16dp"
        android:text="@string/header_help_nav"
        android:textSize="32sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="48dp"
        android:paddingRight="32dp"
        android:paddingTop="5dp"
        android:text="@string/text_help_nav"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="16dp"
        android:text="@string/header_help_add"
        android:textSize="32sp" />

    <TextView
        android:layout_width="fill_parent"
        android:paddingTop="5dp"
        android:layout_height="match_parent"
        android:paddingLeft="48dp"
        android:paddingRight="32dp"
        android:text="@string/text_help_add"
        android:textSize="16sp" />
</LinearLayout>