<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="16dp"
        android:text="@string/header_about_app"
        android:textSize="32sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="48dp"
        android:paddingRight="32dp"
        android:paddingTop="5dp"
        android:text="@string/text_about_app"
        android:textSize="16sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="16dp"
        android:text="@string/header_about_version"
        android:textSize="32sp" />

    <TextView
        android:layout_width="fill_parent"
        android:paddingTop="5dp"
        android:layout_height="wrap_content"
        android:paddingLeft="48dp"
        android:paddingRight="32dp"
        android:text="@string/text_about_version"
        android:textSize="16sp" />
</LinearLayout>